--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,11 +1,15 @@
-title: c3-wolfram-hieroglyphics
+title: Hieroglyphics Keyboard
 hero_image: images/banner.png
-description: c3-wolfram-hieroglyphics description
+description:
 version: 4
 listed: false
 copyedit: false
-last_tested: "2019-01-28"
+last_tested: "2018-12-06"
 steps:
   - title: Introduction
-  - title: Step title
-  - title: What next?
+  - title: Associating Hieroglyphs with Letters
+  - title: Creating a Keyboard
+  - title: Clearing the Output and Deleting the Last Value
+  - title: Improve the Interface
+  - title: "Challenge: Translating Hieroglyphics to Letters"
+    challenge: true
